<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.monash.fit4039.gym_fitness_workout_tracker.fragment.AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/about_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fillViewport="true"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_view_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:autoLink="web"
                android:text="@string/firebaseUI_website"
                android:textSize="@dimen/text_view_size_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:autoLink="web"
                android:text="@string/firebase_website"
                android:textSize="@dimen/text_view_size_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:autoLink="web"
                android:text="@string/google_map_website"
                android:textSize="@dimen/text_view_size_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/circle_image_view_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_view_size_large" />

            <TextView
                android:id="@+id/license_circleImageView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/circle_image_view_text"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:autoLink="email"
                android:text="@string/about_email"
                android:textSize="@dimen/text_view_size_large" />


        </LinearLayout>

    </ScrollView>

</FrameLayout>
