<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.monash.fit4039.gym_fitness_workout_tracker.fragment.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="48dp">

            <EditText
                android:id="@+id/newEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:imeOptions="actionUnspecified"/>

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_new_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:id="@+id/changeEmail"
                style="?android:textAppearanceSmall"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/button"
                android:text="@string/btn_update"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/changePass"
                style="?android:textAppearanceSmall"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button"
                android:text="@string/btn_update"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/changeEmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@drawable/button"
                android:hint="@string/btn_change_email"
                android:textColorHint="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_view_size_large"/>

            <Button
                android:id="@+id/changePassButton"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/button"
                android:hint="@string/btn_change_password"
                android:textSize="@dimen/text_view_size_large"
                android:textColorHint="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/sign_out_button"
                android:hint="@string/btn_sign_out"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/text_view_size_large"
                android:textStyle="bold"/>
            <ProgressBar
                android:id="@+id/setting_progressBar"
                android:layout_marginTop="48dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</FrameLayout>
