<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="edu.monash.fit4039.gym_fitness_workout_tracker.activity.CreateProfileActivity">


    <android.support.v7.widget.Toolbar
    android:id="@+id/profile_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="Height:"
        android:textSize="@dimen/text_view_size_large"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="Age:"
        android:textSize="@dimen/text_view_size_large" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="Weight:"
        android:textSize="@dimen/text_view_size_large"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_marginStart="39dp"
        android:layout_marginTop="18dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="Gender:"
        android:textSize="@dimen/text_view_size_large" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="Name:"
        android:textSize="@dimen/text_view_size_large"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/profile_toolbar"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/profile_nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="@dimen/text_view_size_large"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toEndOf="@+id/textView8"
        android:hint="@string/hint_optional"
        android:textColorHint="@color/input_login_hint" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView8"
        android:layout_toEndOf="@+id/textView7">

        <RadioButton
            android:id="@+id/radioButton_Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Male"
            android:textSize="@dimen/text_view_size_large" />

        <RadioButton
            android:id="@+id/radioButton_Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Female"
            android:textSize="@dimen/text_view_size_large" />
    </RadioGroup>

    <EditText
        android:id="@+id/profile_ageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignStart="@+id/profile_nameEditText"
        android:layout_alignEnd="@+id/profile_nameEditText" />

    <EditText
        android:id="@+id/profile_heightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignStart="@+id/profile_ageEditText"
        android:layout_alignEnd="@+id/profile_ageEditText"
        android:hint="@string/hint_height"
        android:textColorHint="@color/input_login_hint"
        />

    <EditText
        android:id="@+id/profile_weightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignEnd="@+id/profile_heightEditText"
        android:layout_alignStart="@+id/profile_heightEditText"
        android:ems="10"
        android:hint="@string/hint_weight"
        android:inputType="numberDecimal"
        android:textColorHint="@color/input_login_hint" />

    <Button
        android:id="@+id/profile_saveButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/button"
        android:hint="SAVE"
        android:textAlignment="center"
        android:textColorHint="@color/button_text"
        android:textSize="@dimen/text_view_size_large"
        />

</RelativeLayout>
